docs: improve OpenAPI documentation
